--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 streamlit
 groq
-mcp[sse]
+mcp
+httpx-sse # Mantenha esta para garantir a dependência da SseClientTransport
 python-dotenv
+streamlit-asyncio # Essencial para esta abordagem
