--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "google-genai>=1.16.1",
+    "google-generativeai>=0.8.5",
     "groq>=0.25.0",
     "mcp>=1.9.0",
     "nest-asyncio>=1.6.0",
